--- a/_includes/site-header.html
+++ b/_includes/site-header.html
@@ -9,8 +9,8 @@
       <a class="site-title" href="{{ "/" | absolute_url }}">Back home<!--{{ site.title | escape }}--></a>
     {% endif %}
 
-    {% if page_refs != '' %}
-      <nav class="site-nav">
+    {% if page_refs %}
+    <!--  <nav class="site-nav">
         <input type="checkbox" id="nav-trigger" class="nav-trigger" />
         <label for="nav-trigger">
           <span class="menu-icon">
@@ -33,7 +33,7 @@
             {% endif %}
           {% endfor %}
         </div>
-      </nav>
+      </nav> -->
     {% endif %}
   </div>
 </header>
