--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -37,3 +37,9 @@ figcaption {
     font-size: small;
     text-align: center;
 }
+
+img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
