--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -129,7 +129,7 @@
                     </a>
                 </span>
                 {% endif %}
-                &copy; Robbert Berghuis
+                &copy; Robbert Berghuis {{ "now" | date: "%Y" }}
             </footer>
         </section>
         
