--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -129,7 +129,7 @@
                     </a>
                 </span>
                 {% endif %}
-                &copy; Robbert Berghuis {{ "now" | date: "%Y" }}
+                <span class="vertical-align">&copy; Robbert Berghuis {{ "now" | date: "%Y" }}</span>
             </footer>
         </section>
         
