--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -43,3 +43,8 @@ img {
     margin-left: auto;
     margin-right: auto;
 }
+
+.vertical-align {
+    display: inline-block;
+    vertical-align: middle;
+}
