Added Plausible web analytics

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,7 +2,8 @@
 <html lang="{{ page.lang | default: site.lang | default: "en" }}">
 
 <head>
-    
+    <script defer data-domain="rberghuis.github.io" src="https://plausible.io/js/script.js"></script>
+
     {% if site.google_analytics %}
     <script async src="https://www.googletagmanager.com/gtag/js?id={{ site.google_analytics }}"></script>
     <script>
