--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,7 +2,7 @@
 <html lang="{{ page.lang | default: site.lang | default: "en" }}">
 
 <head>
-    <script defer data-domain="rberghuis.github.io" src="https://plausible.io/js/script.js"></script>
+    <script defer data-domain="rberghuis.github.io" src="https://plausible.io/js/script.tagged-events.js"></script>
 
     {% if site.google_analytics %}
     <script async src="https://www.googletagmanager.com/gtag/js?id={{ site.google_analytics }}"></script>
@@ -100,14 +100,14 @@
                 
                 <!-- Github icon -->
                 <span class="my-span-icon">
-                    <a href="https://github.com/rberghuis" aria-label="Robbert's GitHub" title="Robbert's GitHub">
+                    <a href="https://github.com/rberghuis" aria-label="Robbert's GitHub" class="plausible-event-name=Footer+GitHub" title="Robbert's GitHub">
                         <svg class="my-svg-icon" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z"/></svg>
                     </a>
                 </span>
 
                 <!-- LinkedIn icon -->
                 <span class="my-span-icon">
-                    <a href="https://www.linkedin.com/in/robbertberghuis" aria-label="Robbert's LinkedIn" title="Robbert's LinkedIn">
+                    <a href="https://www.linkedin.com/in/robbertberghuis" aria-label="Robbert's LinkedIn" class="plausible-event-name=Footer+LinkedIn" title="Robbert's LinkedIn">
                         <svg class="my-svg-icon" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M 0 1.719 C 0 0.7695 0.789 0 1.7625 0 h 20.475 C 23.211 0 24 0.7695 24 1.719 v 20.562 c 0 0.9495 -0.789 1.719 -1.7625 1.719 H 1.7625 C 0.789 24 0 23.2305 0 22.281 z m 7.4145 18.372 V 9.2535 H 3.813 v 10.8375 z m -1.8 -12.318 c 1.2555 0 2.037 -0.831 2.037 -1.872 c -0.0225 -1.0635 -0.78 -1.872 -2.013 -1.872 S 3.6 4.839 3.6 5.901 c 0 1.041 0.7815 1.872 1.9905 1.872 z m 7.362 12.318 V 14.0385 c 0 -0.324 0.024 -0.648 0.12 -0.879 c 0.2595 -0.6465 0.852 -1.317 1.848 -1.317 c 1.3035 0 1.824 0.993 1.824 2.451 v 5.7975 h 3.6015 V 13.875 c 0 -3.33 -1.776 -4.878 -4.146 -4.878 c -1.911 0 -2.7675 1.05 -3.2475 1.7895 v 0.0375 h -0.024 l 0.024 -0.0375 V 9.2535 h -3.6 c 0.045 1.017 0 10.8375 0 10.8375 z"/></svg>
                     </a>
                 </span>
