--- a/_includes/site-header.html
+++ b/_includes/site-header.html
@@ -1,4 +1,4 @@
-{% if page.layout != 'home' %}
+
 <header class="site-header" role="banner">
 
   <div class="wrapper">
@@ -10,7 +10,7 @@
     {% endif %}
 
     {% if page_refs %}
-    <!--  <nav class="site-nav">
+    <nav class="site-nav">
         <input type="checkbox" id="nav-trigger" class="nav-trigger" />
         <label for="nav-trigger">
           <span class="menu-icon">
@@ -33,8 +33,7 @@
             {% endif %}
           {% endfor %}
         </div>
-      </nav> -->
+      </nav>
     {% endif %}
   </div>
 </header>
-{% endif %}
